--- a/Research.html
+++ b/Research.html
@@ -67,115 +67,171 @@
 <!-- ⭐ MAIN CONTENT -->
 <div class="content">
     
+<style>
+  body {
+    background: #E6E6FA; /* Lavender */
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 30px;
+  }
+
+  .content-box {
+    background: white;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.08);
+    max-width: 1000px;
+    margin: auto;
+  }
+
+  h1, h2, h3 {
+    font-family: "Georgia", serif;
+    color: #4B0082; /* Indigo */
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+  }
+
+  td {
+    vertical-align: top;
+    padding: 8px;
+  }
+
+  img {
+    width: 100%;
+    border-radius: 10px;
+  }
+
+  .paper-card {
+    background: #faf8ff;
+    border-left: 5px solid #6A5ACD; /* Slate blue */
+    padding: 18px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+  }
+
+  .paper-title {
+    font-weight: bold;
+    color: #333;
+    font-size: 18px;
+  }
+
+</style>
+
+<div class="content-box">
+
 <h1>Research</h1>
 
 <h2>Publications</h2>
-<ol>
-  <li>
-    Mukherjee, U., Pingle, M. (2023). 
-    <a href="https://example.com/paper1" target="_blank">
-      Book Review of Behavioural Economics and Experiments, by Ananish Chaudhuri
-    </a>. 
-    Journal of Behavioral Economics for Policy, Volume 7, Issue 1, 51–52, 2023.
-  </li>
-</ol>
+
+<div class="paper-card">
+  1. Mukherjee, U., Pingle, M. (2023). 
+  <a href="https://example.com/paper1" target="_blank">
+    Book Review of Behavioural Economics and Experiments, by Ananish Chaudhuri
+  </a>. 
+  <i>Journal of Behavioral Economics for Policy</i>, 7(1), 51–52.
+</div>
 
 <h2>Working Papers</h2>
 
-<ol>
-  <li><strong>Job Market Paper:</strong> The Effects of Extended Medicaid Postpartum Coverage on Insurance and Mental Health Outcomes.<br>
-    <i>With Sankar Mukhopadhyay</i>
+<!-- PAPER 1 -->
+<div class="paper-card">
 
-    <h3>Abstract</h3>
+  <div class="paper-title">
+    1. Job Market Paper: The Effects of Extended Medicaid Postpartum Coverage on Insurance and Mental Health Outcomes
+  </div>
+  <i>With Sankar Mukhopadhyay</i>
 
-    <table style="width:100%; border-collapse:collapse;">
-      <tr>
-        <td style="width:60%; vertical-align:top; padding-right:15px;">
-          Despite the United States' high healthcare expenditure, maternal outcomes remain significantly worse compared 
-          to other developed nations. The American Rescue Plan Act (ARPA) of 2021 aimed to address this issue by allowing 
-          states to extend Medicaid postpartum coverage from 60 days to 12 months. In an era dominated by sharp partisan 
-          differences, most states moved quickly to adopt this extension. This paper evaluates the effects of this policy 
-          change using high-frequency data from the Household Pulse Survey and a staggered Difference-in-Differences (DiD) 
-          framework. Our findings indicate that the postpartum coverage expansion significantly increased Medicaid enrollment 
-          and reduced uninsurance rates among women of childbearing age. Additionally, the policy led to notable reductions in 
-          moderate to severe anxiety and depression, highlighting its positive impact on maternal mental health. The results 
-          underscore the importance of continuous health insurance coverage in improving maternal mental health.
-        </td>
+  <h3>Abstract</h3>
 
-        <td style="width:40%; text-align:center;">
-          <img src="Paper_1.png" style="width:100%; border-radius:10px;">
-        </td>
-      </tr>
-    </table>
-  </li>
+  <table>
+    <tr>
+      <td style="width:60%; padding-right:15px;">
+        Despite the United States' high healthcare expenditure, maternal outcomes remain significantly worse compared 
+        to other developed nations. The American Rescue Plan Act (ARPA) of 2021 allowed states to extend Medicaid 
+        postpartum coverage from 60 days to 12 months. This paper evaluates the effects of this policy change using 
+        high-frequency data from the Household Pulse Survey and a staggered Difference-in-Differences (DiD) framework. 
+        The postpartum coverage expansion significantly increased Medicaid enrollment and reduced uninsurance rates 
+        among women of childbearing age. Additionally, the policy led to notable reductions in moderate to severe anxiety 
+        and depression, highlighting its positive impact on maternal mental health.
+      </td>
 
-  <br>
+      <td style="width:40%; text-align:center;">
+        <img src="Paper_1.png">
+      </td>
+    </tr>
+  </table>
 
-  <li><strong>The Effects of Debt Relief on the Mental Health of Farmers.</strong><br>
-    <i>With Sankar Mukhopadhyay</i>
+</div>
 
-    <h3>Abstract</h3>
+<!-- PAPER 2 -->
+<div class="paper-card">
 
-    <table style="width:100%; border-collapse:collapse;">
-      <tr>
-        <td style="width:100%; vertical-align:top;">
-          We use the quasi-exogenous variation from the farm debt relief programs established by the 2022 Inflation Reduction Act (IRA) 
-          to estimate the effect of debt relief on the mental health outcomes of farmers in the U.S. Using high-frequency (monthly), 
-          nationally representative data from the Household Pulse Survey (HPS) and difference-in-differences regressions, we find that 
-          the IRA debt relief programs improved mental health among farmers. Our preferred estimates suggest that anxiety decreased by 
-          9.5% and depression by 9.0%. These effects are stronger among minority farmers: anxiety decreased by 25.2%, and depression 
-          decreased by 28.0%. These results suggest that IRA debt relief had a positive and meaningful impact on farmers’ mental health, 
-          especially among minority farmers.
-        </td>
-      </tr>
-    </table>
-  </li>
+  <div class="paper-title">
+    2. The Effects of Debt Relief on the Mental Health of Farmers
+  </div>
+  <i>With Sankar Mukhopadhyay</i>
 
-  <br>
+  <h3>Abstract</h3>
 
-  <li><strong>Impact of Negative Life Events on Financial Risk Taking.</strong><br>
-    <i>With Federico Guerrero</i>
+  Using quasi-exogenous variation from the farm debt relief programs created by the 2022 Inflation Reduction Act (IRA), 
+  we estimate the effect of debt relief on the mental health of U.S. farmers. Using monthly, nationally representative 
+  data from the Household Pulse Survey and difference-in-differences regressions, we find that IRA debt relief improved 
+  farmers' mental health: anxiety decreased by 9.5% and depression by 9.0%. Effects were substantially larger among 
+  minority farmers, with anxiety falling by 25.2% and depression by 28.0%. These findings highlight the important role 
+  of financial relief in improving mental health outcomes.
 
-    <h3>Abstract</h3>
+</div>
 
-    <table style="width:100%; border-collapse:collapse;">
-      <tr>
-        <td style="width:60%; vertical-align:top; padding-right:15px;">
-          This paper investigates whether traumatic life events—specifically, the loss of a child—shape individuals’ willingness to 
-          engage in financial risk-taking. Using data from the 2004–2016 waves of the US Health and Retirement Study (HRS), we proxy 
-          risk preferences through observed portfolio decisions, focusing primarily on stock market participation as an indicator of 
-          financial risk-taking behavior. Our analysis reveals that individuals who have experienced the death of a child are less 
-          likely to invest in risky assets, suggesting the presence of a negative association between bereavement and financial 
-          risk-taking. However, while the evidence points to a potential correlation, the relationship is not statistically definitive. 
-          These findings contribute to the broader literature on how deeply personal and emotionally significant life shocks can 
-          influence economic decision-making.
-        </td>
+<!-- PAPER 3 -->
+<div class="paper-card">
 
-        <td style="width:40%; text-align:center;">
-          <img src="neglif.png" style="width:100%; border-radius:10px;">
-          <br>
-          <sub><i>Proportion of stock holders conditional on the number of life events</i></sub>
-        </td>
-      </tr>
-    </table>
-  </li>
-</ol>
+  <div class="paper-title">
+    3. Impact of Negative Life Events on Financial Risk Taking
+  </div>
+  <i>With Federico Guerrero</i>
+
+  <h3>Abstract</h3>
+
+  <table>
+    <tr>
+      <td style="width:60%; padding-right:15px;">
+        This paper investigates whether traumatic life events—specifically, the loss of a child—shape individuals’ 
+        willingness to engage in financial risk-taking. Using data from the 2004–2016 waves of the Health and Retirement 
+        Study (HRS), we proxy risk preferences through portfolio choices, focusing on stock market participation. 
+        Individuals who have experienced the death of a child are less likely to invest in risky assets, suggesting a 
+        negative association between bereavement and financial risk-taking, although the effect is not statistically 
+        definitive.
+      </td>
+
+      <td style="width:40%; text-align:center;">
+        <img src="neglif.png">
+        <br>
+        <sub><i>Proportion of stock holders conditional on the number of life events</i></sub>
+      </td>
+    </tr>
+  </table>
+
+</div>
 
 <h2>Work in Progress</h2>
 
-<ol>
-  <li>
-    <strong>The Hidden Costs of Care: Health and Economic Impacts of Informal Caregiving in the United States.</strong><br>
-    <i>Solo-authored paper</i>
-  </li>
+<div class="paper-card">
+  <strong>The Hidden Costs of Care: Health and Economic Impacts of Informal Caregiving in the United States.</strong><br>
+  <i>Solo-authored paper</i>
+</div>
 
-  <li>
-    <strong>The Effects of Intergenerational Investment Advice.</strong><br>
-    <i>With Federico Guerrero and Garret Ridinger</i>
-  </li>
+<div class="paper-card">
+  <strong>The Effects of Intergenerational Investment Advice.</strong><br>
+  <i>With Federico Guerrero and Garret Ridinger</i>
+</div>
 
-  <li>
-    <strong>Empathy in Economic Decision Making: Propensity to Be Helpful When Faced with Varied Costs.</strong><br>
-    <i>With Mark Pingle</i>
-  </li>
-</ol>
+<div class="paper-card">
+  <strong>Empathy in Economic Decision Making: Propensity to Be Helpful When Faced with Varied Costs.</strong><br>
+  <i>With Mark Pingle</i>
+</div>
+
+</div>
