--- a/Research.html
+++ b/Research.html
@@ -150,13 +150,18 @@
   <table>
     <tr>
       <td style="width:60%; padding-right:15px;">
-        Despite the United States' high healthcare expenditure, maternal outcomes remain significantly worse compared 
-        to other developed nations. The American Rescue Plan Act (ARPA) of 2021 allowed states to extend Medicaid 
-        postpartum coverage from 60 days to 12 months. This paper evaluates the effects of this policy change using 
-        high-frequency data from the Household Pulse Survey and a staggered Difference-in-Differences (DiD) framework. 
-        The postpartum coverage expansion significantly increased Medicaid enrollment and reduced uninsurance rates 
-        among women of childbearing age. Additionally, the policy led to notable reductions in moderate to severe anxiety 
-        and depression, highlighting its positive impact on maternal mental health.
+        Despite the United States' high healthcare expenditure, maternal outcomes remain 
+significantly worse compared to other developed nations. The American Rescue Plan Act 
+(ARPA) of 2021 aimed to address this issue by allowing states to extend Medicaid postpartum 
+coverage from 60 days to 12 months. In an era dominated by sharp differences and party 
+ideology, most red and blue states moved quickly to adopt this extension. This paper evaluates 
+the effects of this policy change using high-frequency data from the Household Pulse Survey and 
+a staggered Difference-in-Differences (DiD) framework. Our findings indicate that the 
+postpartum coverage expansion significantly increased Medicaid enrollment and reduced 
+uninsurance rates among women of childbearing age. Additionally, the policy led to notable 
+reductions in moderate to severe anxiety and depression, highlighting its positive impact on 
+maternal mental health. The results underscore the importance of continuous health insurance 
+coverage in improving maternal mental health. 
       </td>
 
       <td style="width:40%; text-align:center;">
