--- a/Research.html
+++ b/Research.html
@@ -182,12 +182,7 @@ coverage in improving maternal mental health.
 
   <h3>Abstract</h3>
 
-  Using quasi-exogenous variation from the farm debt relief programs created by the 2022 Inflation Reduction Act (IRA), 
-  we estimate the effect of debt relief on the mental health of U.S. farmers. Using monthly, nationally representative 
-  data from the Household Pulse Survey and difference-in-differences regressions, we find that IRA debt relief improved 
-  farmers' mental health: anxiety decreased by 9.5% and depression by 9.0%. Effects were substantially larger among 
-  minority farmers, with anxiety falling by 25.2% and depression by 28.0%. These findings highlight the important role 
-  of financial relief in improving mental health outcomes.
+We use the quasi-exogenous variation from the farm debt relief programs established by the 2022 Inflation Reduction Act (IRA) to estimate the effect of debt relief on the mental health outcomes of the farmers in the U.S. Using high-frequency (monthly) nationally representative data from the Household Pulse Survey (HPS) and difference in difference regressions we find that the IRA debt relief programs improved mental health of farmers. Our preferred estimates suggest that among farmers anxiety decreased by 9.5% and depression by 9.0%. The effects are stronger among minority farmers. Anxiety decreased by 25.2%, and depression decreased by 28.0% among minority farmers. These results suggest that the IRA debt relief had a positive effect on the mental health of farmers, especially the minority farmers.
 
 </div>
 
