--- a/Research.html
+++ b/Research.html
@@ -149,7 +149,7 @@
 
   <table>
     <tr>
-      <td style="width:60%; padding-right:15px;">
+      <td style="width:100%; padding-right:15px;">
         Despite the United States' high healthcare expenditure, maternal outcomes remain 
 significantly worse compared to other developed nations. The American Rescue Plan Act 
 (ARPA) of 2021 aimed to address this issue by allowing states to extend Medicaid postpartum 
@@ -182,7 +182,16 @@ coverage in improving maternal mental health.
 
   <h3>Abstract</h3>
 
-We use the quasi-exogenous variation from the farm debt relief programs established by the 2022 Inflation Reduction Act (IRA) to estimate the effect of debt relief on the mental health outcomes of the farmers in the U.S. Using high-frequency (monthly) nationally representative data from the Household Pulse Survey (HPS) and difference in difference regressions we find that the IRA debt relief programs improved mental health of farmers. Our preferred estimates suggest that among farmers anxiety decreased by 9.5% and depression by 9.0%. The effects are stronger among minority farmers. Anxiety decreased by 25.2%, and depression decreased by 28.0% among minority farmers. These results suggest that the IRA debt relief had a positive effect on the mental health of farmers, especially the minority farmers.
+   We use the quasi-exogenous variation from the farm debt relief programs established
+   by the 2022 Inflation Reduction Act (IRA) to estimate the effect of debt relief on 
+   the mental health outcomes of the farmers in the U.S. Using high-frequency (monthly)
+   nationally representative data from the Household Pulse Survey (HPS) and difference 
+   in difference regressions we find that the IRA debt relief programs improved mental 
+   health of farmers. Our preferred estimates suggest that among farmers anxiety decreased
+   by 9.5% and depression by 9.0%. The effects are stronger among minority farmers. Anxiety
+   decreased by 25.2%, and depression decreased by 28.0% among minority farmers. These 
+   results suggest that the IRA debt relief had a positive effect on the mental health of 
+   farmers, especially the minority farmers.
 
 </div>
 
@@ -198,13 +207,20 @@ We use the quasi-exogenous variation from the farm debt relief programs establis
 
   <table>
     <tr>
-      <td style="width:60%; padding-right:15px;">
-        This paper investigates whether traumatic life events—specifically, the loss of a child—shape individuals’ 
-        willingness to engage in financial risk-taking. Using data from the 2004–2016 waves of the Health and Retirement 
-        Study (HRS), we proxy risk preferences through portfolio choices, focusing on stock market participation. 
-        Individuals who have experienced the death of a child are less likely to invest in risky assets, suggesting a 
-        negative association between bereavement and financial risk-taking, although the effect is not statistically 
-        definitive.
+      <td style="width:100%; padding-right:15px;">
+          This paper investigates whether traumatic life events—specifically, the loss of a 
+          child—shape individuals’ willingness to engage in financial risk-taking.
+          Using data from the 2004–2016 waves of the US Health and Retirement Study (HRS),
+          we proxy risk preferences through observed portfolio decisions, focusing 
+          primarily on stock market participation as an indicator of financial risk-taking 
+          behavior. Our analysis reveals that individuals who have experienced the death of
+          a child are less likely to invest in risky assets, suggesting the presence of a
+          negative association between bereavement and financial risk-taking. However, while 
+          the evidence points to a potential correlation, the relationship is not statistically
+          definitive. These findings contribute to the broader literature on how deeply 
+          personal and emotionally significant life shocks can influence economic 
+          decision-making, highlighting the possibility that traumatic experiences may have
+          persistent effects even in domains unrelated to the original event.
       </td>
 
       <td style="width:40%; text-align:center;">
