--- a/Research.html
+++ b/Research.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
+    <meta charset="UTF-8">
+    <title>Research</title>
+    <style>
+        body {
+            font-family: "Georgia", "Times New Roman", serif;
+      background: lavender;
+      margin: 40px;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1 {
+      font-size: 2.4rem;
+      margin-bottom: 1rem;
+    }
+    h2 {
+      font-size: 1.5rem;
+      margin-top: 2rem;
+      margin-bottom: 0.5rem;
+    }
+    ol {
+      padding-left: 1.5rem;
+    }
+  </style>
 </head>
 <body>
 
@@ -113,4 +136,7 @@ This paper investigates whether traumatic life events—specifically, the loss o
 </ol>
 
 </body>
+</html>
+
+
 </html>
