--- a/Research.html
+++ b/Research.html
@@ -3,6 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>Research</title>
+
+        <!-- ⭐ NAVBAR -->
+<div class="navbar">
+    <div class="name">Urjaswi Mukherjee</div>
+    <a href="index.html">Home</a>
+    <a href="Research.html" class="active">Research</a>
+    <a href="Teaching.html">Teaching</a>                   
+    <a href="cv.html">CV</a>
+</div>
+    
+<style>
+/* ⭐ NAVBAR STYLE */
+.navbar {
+    background: white;
+    padding: 20px 60px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    font-family: Georgia, "Times New Roman", serif;
+}
+
+.navbar .name {
+    font-size: 22px;
+    font-weight: bold;
+    margin-right: 50px;
+    color: #000;
+}
+
+.navbar a {
+    margin-right: 25px;
+    text-decoration: none;
+    color: #333;
+    font-size: 17px;
+}
+
+.navbar a:hover {
+    color: #0072c6;
+}
+
+.navbar a.active {
+    color: #0072c6;
+    font-weight: bold;
+}
+
     <style>
         body {
             font-family: "Georgia", "Times New Roman", serif;
