--- a/Research.html
+++ b/Research.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Research</title>
-
     <style>
         body {
             font-family: "Georgia", "Times New Roman", serif;
@@ -27,6 +26,28 @@
   </style>
 </head>
 <body>
+
+  <h1>Research</h1>
+
+  <h2>Publications</h2>
+  <ol>
+    <li>
+      Mukherjee, U., Pingle, M. (2023). 
+      <a href="https://example.com/paper1" target="_blank">
+        Book Review of Behavioural Economics and Experiments, by Ananish Chaudhuri
+        </a>. 
+        Journal of Behavioral Economics for Policy, Volume 7, Issue 1, 51-52, 2023. 
+    </li>
+  </ol>
+
+  <h2>Working Papers</h2>
+  <ol>
+    <li>
+      <em>Job Market Paper:The Effects of Extended Medicaid Postpartum Coverage on Insurance and Mental Health Outcomes.
+      </a><br>
+      With Sankar Mukhopadhyaty</a><br>
+     </li>
+  </ol>
 
 <h1>Research</h1>
 
@@ -102,12 +123,12 @@ This paper investigates whether traumatic life events—specifically, the loss o
         The Hidden Costs of Care: Health and Economic Impacts of Informal Caregiving in the United States.<br>
         <i>Solo-authored paper</i>
     </li>
-    <br>
+
     <li>
         The Effects of Intergenerational Investment Advice.<br>
         <i>With Federico Guerrero and Garret Ridinger</i>
     </li>
-    <br>
+
     <li>
         Empathy in Economic Decision Making: Propensity to Be Helpful When Faced with Varied Costs.<br>
         <i>With Mark Pingle</i>
