--- a/Research.html
+++ b/Research.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Research</title>
+    <title>Research | Urjaswi Mukherjee</title>
     <style>
         body {
             font-family: "Georgia", "Times New Roman", serif;
@@ -11,6 +11,17 @@
       line-height: 1.6;
       color: #333;
     }
+
+    .navbar {
+        background: white;
+        padding: 20px 60px;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #ddd;
+    }
+        
+
+        
     h1 {
       font-size: 2.4rem;
       margin-bottom: 1rem;
