--- a/Teaching.html
+++ b/Teaching.html
@@ -85,8 +85,8 @@
 <div class="navbar">
     <div class="name">Urjaswi Mukherjee</div>
     <a href="index.html">Home</a>
-    <a href="research.html">Research</a>
-    <a href="teaching.html" class="active">Teaching</a>
+    <a href="Research.html">Research</a>
+    <a href="Teaching.html" class="active">Teaching</a>
     <a href="cv.html">CV</a>
 </div>
 
