--- a/Research.html
+++ b/Research.html
@@ -55,6 +55,15 @@
 </head>
 <body>
 
+    <!-- ⭐ NAVBAR -->
+<div class="navbar">
+    <div class="name">Urjaswi Mukherjee</div>
+    <a href="index.html">Home</a>
+    <a href="Research.html" class="active">Research</a>
+    <a href="Teaching.html">Teaching</a>
+    <a href="cv.html">CV</a>
+</div>
+
 <h1>Research</h1>
 
 <h2>Publications</h2>
