--- a/Teaching.html
+++ b/Teaching.html
@@ -55,7 +55,9 @@
         font-size: 26px;
         font-weight: bold;
     }
-
+    ol {
+      padding-left: 1.5rem;
+    }
     .section-title {
         font-size: 20px;
         font-weight: bold;
