--- a/Research.html
+++ b/Research.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Research | Urjaswi Mukherjee</title>
+    <meta charset="UTF-8"/>
+    <title>Urjaswi Mukherjee</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <style>
         body {
             font-family: "Georgia", "Times New Roman", serif;
@@ -12,32 +15,29 @@
       color: #333;
     }
 
-    .navbar {
-        background: white;
-        padding: 20px 60px;
-        display: flex;
-        align-items: center;
-        border-bottom: 1px solid #ddd;
-    }
-    .navbar .name {
-        font-size: 20px;
-        font-weight: bold;
-        margin-right: 50px;
+        /* ------- Top nav bar ------- */
+    .top-bar {
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      background: #ffffff;
+      border-bottom: 1px solid #e1e4e8;
+      padding: 12px 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
 
-    .navbar a {
-        margin-right: 25px;
-        text-decoration: none;
-        color: #333;
-        font-size: 16px;
+    .top-bar .name {
+      font-weight: 600;
+      font-size: 20px;
     }
-    .navbar a:hover {
-        color: #0072c6;
+
+    .nav-links a {
+      margin-left: 20px;
+      font-size: 15px;
     }
-    .navbar a.active {
-        color: #0072c6;
-        font-weight: bold;
-    }
+
        
     h1 {
       font-size: 2.4rem;
@@ -55,14 +55,17 @@
 </head>
 <body>
 
-    <!-- ⭐ NAVBAR -->
-<div class="navbar">
+<!-- Top navigation bar -->
+  <header class="top-bar">
     <div class="name">Urjaswi Mukherjee</div>
-    <a href="index.html">Home</a>
-    <a href="Research.html" class="active">Research</a>
-    <a href="Teaching.html">Teaching</a>
-    <a href="cv.html">CV</a>
-</div>
+    <nav class="nav-links">
+      <a href="#about">About</a>
+      <a href="Research.html" class="active">Research</a>
+      <a href="Teaching.html">Teaching</a>
+      <a href="CV.html">CV</a>
+    </nav>
+  </header>
+
 
 <h1>Research</h1>
 
