--- a/Research.html
+++ b/Research.html
@@ -59,7 +59,7 @@
   <header class="top-bar">
     <div class="name">Urjaswi Mukherjee</div>
     <nav class="nav-links">
-      <a href="#about">About</a>
+      <a href="index.html">Home</a>
       <a href="Research.html" class="active">Research</a>
       <a href="Teaching.html">Teaching</a>
       <a href="CV.html">CV</a>
