--- a/Research.html
+++ b/Research.html
@@ -37,7 +37,10 @@
       margin-left: 20px;
       font-size: 15px;
     }
-
+ .nav {
+    margin: 0;
+    padding: 0;
+  }
        
     h1 {
       font-size: 2.4rem;
@@ -66,11 +69,6 @@
     </nav>
   </header>
     
-header {
-  margin: 0;
-  padding: 0;
-}
-
 <h1>Research</h1>
 
 <h2>Publications</h2>
