--- a/Teaching.html
+++ b/Teaching.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Teaching | Urjaswi Mukherjee</title>
+<title>Urjaswi Mukherjee</title>
 
 <style>
     body {
         font-family: Georgia, "Times New Roman", serif;
         background: #f2f3f7;
-        margin: 0;
+        margin: 40px;
         padding: 0;
         color: #222;
         line-height: 1.6;
