--- a/Teaching.html
+++ b/Teaching.html
@@ -9,7 +9,7 @@
         font-family: Georgia, "Times New Roman", serif;
         background: #f2f3f7;
         margin: 40px;
-        padding: 0;
+        padding: 20px;
         color: #222;
         line-height: 1.6;
     }
