--- a/Research.html
+++ b/Research.html
@@ -37,6 +37,13 @@
       margin-left: 20px;
       font-size: 15px;
     }
+         /* ------- Main layout ------- */
+    .page {
+      max-width: 1000px;
+      margin: 40px auto 60px;
+      padding: 0 40px;
+    }
+        
  .nav {
     margin: 0;
     padding: 0;
