--- a/Research.html
+++ b/Research.html
@@ -14,6 +14,9 @@
       line-height: 1.6;
       color: #333;
     }
+  a {
+            text-decoration: none;
+    }
 
         /* ------- Top nav bar ------- */
     .top-bar {
