--- a/Research.html
+++ b/Research.html
@@ -14,9 +14,7 @@
       line-height: 1.6;
       color: #333;
     }
-  a {
-            text-decoration: none;
-    }
+
 
         /* ------- Top nav bar ------- */
     .top-bar {
@@ -40,6 +38,13 @@
       margin-left: 20px;
       font-size: 15px;
     }
+        
+    .navbar a {
+        margin-right: 25px;
+        text-decoration: none;
+    }
+
+        
          /* ------- Main layout ------- */
     .page {
       max-width: 1000px;
