--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <a href="#about">About</a>
       <a href="Research.html">Research</a>
       <a href="Teaching.html">Teaching</a>
-      <a href="CV.html">CV</a>
+      <a href="files/Urjaswi_CV_1201.pdf" target="_blank">CV</a>
     </nav>
   </header>
 
