--- a/Teaching.html
+++ b/Teaching.html
@@ -20,6 +20,8 @@
         display: flex;
         align-items: center;
         border-bottom: 1px solid #ddd;
+        margin: 0;
+        padding-top: 5px;
     }
 
     .navbar .name {
