--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <a href="#about">About</a>
       <a href="Research.html">Research</a>
       <a href="Teaching.html">Teaching</a>
-      <a href="Urjaswi_CV_1201.pdf" target=">CV</a>
+      <a href="CV.html">CV</a>
     </nav>
   </header>
 
@@ -235,6 +235,7 @@
 
     <!-- Self Introduction -->
     <section>
+
       <span style="font-size: 24px;">
         <strong>Self Introduction</strong></span>
       <p>
