--- a/Teaching.html
+++ b/Teaching.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Urjaswi Mukherjee</title>
+  <meta charset="UTF-8" />
+  <title>Urjaswi Mukherjee</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <style>
     body {
