--- a/Teaching.html
+++ b/Teaching.html
@@ -139,37 +139,79 @@
     <li><strong>ECON 103 Principles of Macroeconomics</strong> — Fall 2021</li>
 </ul>
 
-<h2>🎓 Student Feedback Highlights</h2>
+<style>
+  .feedback-section {
+    max-width: 900px;      /* keeps lines from becoming too wide */
+    margin: 0 auto 40px;   /* center the block on the page */
+  }
 
-<div class="feedback-box">
+  .feedback-section h2 {
+    margin-bottom: 20px;
+  }
 
-    <div class="quote">"Professor Mukherjee did an exceptional job in providing lectures and other resources to help us succeed. I did one of the best jobs in an economics class because of her specifically."</div>
+  .feedback-quote {
+    text-align: center;
+    font-style: italic;
+    line-height: 1.6;
+    margin: 10px auto;
+  }
+</style>
 
-    <div class="quote">"Instructor is very knowledgeable in the material, stuck to the syllabus, and good on implying examples to the material being taught."</div>
+<section class="feedback-section">
+  <h2>🎓 Student Feedback Highlights</h2>
 
-    <div class="quote">"The course would normally be a more difficult course regarding mathematics and utilizing formulas... With Professor Mukherjee, she only had strengths for this course that allowed us to succeed."</div>
+  <p class="feedback-quote">
+    "Professor Mukherjee did an exceptional job in providing lectures and other resources to help us succeed.
+    I did one of the best jobs in an economics class because of her specifically."
+  </p>
 
-    <div class="quote">"I really enjoyed her class and would take her again."</div>
+  <p class="feedback-quote">
+    "Instructor is very knowledgeable in the material, stuck to the syllabus, and good on implying examples to the material being taught."
+  </p>
 
-    <div class="quote">"Instructor would talk about subject and give examples which was nice. Especially for weird formulas and their use."</div>
+  <p class="feedback-quote">
+    "The course would normally be a more difficult course regarding mathematics and utilizing formulas.
+    As a whole, the course taught me important subjects that I would need to utilize in the future if I continued with a future in Finance.
+    With Professor Mukherjee, she only had strengths for this course that allowed us to succeed and I wouldn’t say there would be any need for improvement."
+  </p>
 
-    <div class="quote">"Great teacher and a fun class."</div>
+  <p class="feedback-quote">
+    "The professor did well with teaching and assigning an adequate amount of homework."
+  </p>
 
-    <div class="quote">"The course itself was engaging and taught me a lot about economics."</div>
+  <p class="feedback-quote">
+    "Instructor would talk about subject and give examples which was nice. Especially for weird formulas and their use."
+  </p>
 
-    <div class="quote">"Instructor had great knowledge and ways of teaching the class. Great structure throughout the semester."</div>
+  <p class="feedback-quote">
+    "Great teacher and a fun class."
+  </p>
 
-    <div class="quote">"I think she is a great teacher. She’s smart, very knowledgeable, understanding, and willing to work with you."</div>
+  <p class="feedback-quote">
+    "The course itself was engaging and taught me a lot about economics."
+  </p>
 
-    <div class="quote">"I appreciated having concepts broken down slowly. Everything was explained well and she would take time to draw out concepts for us so we could understand more in depth."</div>
+  <p class="feedback-quote">
+    "Instructor had great knowledge and ways of teaching the class. Great structure of teaching the course throughout the semester."
+  </p>
 
-    <div class="quote">"I love how Professor Mukherjee was very straight to the point and wouldn’t confuse the class."</div>
+  <p class="feedback-quote">
+    "I think she is a great teacher. She's smart. She's very knowledgeable. She's understanding, she's willing to work with you and help you."
+  </p>
 
-    <div class="quote">"The professor did well with teaching and assigning an adequate amount of homework.She did amazing."</div>
+  <p class="feedback-quote">
+    "I really appreciated having the concepts broken down slowly for me. I also really appreciated our professor checking in on the class
+    and asking how we were feeling after she taught something difficult. Everything was explained well and she would take the time to draw out
+    concepts for us so we could understand more in depth. I genuinely enjoyed this class."
+  </p>
 
-</div>
+  <p class="feedback-quote">
+    "I love how Professor Mukherjee was very straight to the point and wouldn’t confuse the class."
+  </p>
 
-</div>
-
+  <p class="feedback-quote">
+    "She did amazing, I really enjoyed her class, would take her as a professor again."
+  </p>
+</section>
 </body>
 </html>
