--- a/Teaching.html
+++ b/Teaching.html
@@ -10,10 +10,11 @@
     /* ------- Global ------- */
     body {
       margin: 0;
-      background: #fafafa;
+      background: #e6e6fa;
       color: #222;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
                    Helvetica, Arial, sans-serif;
+      padding: 40px;
       line-height: 1.6;
     }
 
