--- a/Teaching.html
+++ b/Teaching.html
@@ -115,6 +115,13 @@
     </nav>
   </header>
 <!-- ⭐ MAIN CONTENT -->
+<style>
+  .content {
+    margin: 0 auto 40px;   /* center the block on the page */
+  }
+</style>
+  
+<section class="content">
 <div class="content">
 
 <h1>Teaching</h1>
@@ -138,7 +145,8 @@
     <li><strong>ECON 304 Money and Banking</strong> — Spring 2023</li>
     <li><strong>ECON 103 Principles of Macroeconomics</strong> — Fall 2021</li>
 </ul>
-
+</section>
+  
 <style>
   .feedback-section {
     max-width: 900px;      /* keeps lines from becoming too wide */
