--- a/Teaching.html
+++ b/Teaching.html
@@ -117,7 +117,9 @@
 <!-- ⭐ MAIN CONTENT -->
 <style>
   .content {
+    max-width: 900px;
     margin: 0 auto 40px;   /* center the block on the page */
+    padding: 20px; 
   }
 </style>
   
